--- a/camera_assign/src/index.css
+++ b/camera_assign/src/index.css
@@ -11,3 +11,38 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.loading-indicator:before {
+  content: '';
+  background: #000000cc;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 99999 !important;
+}
+
+.circle-border {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  z-index: 99999 !important;
+  -webkit-animation: rotation 1s linear infinite;
+  animation: rotation 1s linear infinite;
+  width: 48px;
+  height: 48px;
+  border: 3px solid rgb(63, 249, 220);
+  border-bottom-color: rgb(0, 255, 128);
+  border-radius: 50%;
+}
+
+.circle-core {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  border-radius: 50%;
+}
