--- a/camera_assign/src/screens/dashboard/Dashboard.css
+++ b/camera_assign/src/screens/dashboard/Dashboard.css
@@ -3,3 +3,17 @@
     align-items: center;
     justify-content: center;
 }
+
+.dashboard{
+    background-color: rgb(234, 231, 231);
+    margin: 10px;
+    padding: 10px;
+}
+
+.location{
+    width: 17%;
+}
+
+.table{
+    border: 1px solid grey;
+}
